@@ -4,7 +4,8 @@ HwPerturbativeDecay_la_SOURCES = \
  SMHiggsFermionsDecayer.cc  SMHiggsFermionsDecayer.fh  \
  SMHiggsFermionsDecayer.h  SMHiggsFermionsDecayer.icc  \
  SMTopDecayer.cc SMTopDecayer.fh SMTopDecayer.h SMTopDecayer.icc \
- SMHDecayer.cc SMHDecayer.fh SMHDecayer.h SMHDecayer.icc
+ SMHiggsGGHiggsPPDecayer.cc SMHiggsGGHiggsPPDecayer.fh \
+ SMHiggsGGHiggsPPDecayer.h SMHiggsGGHiggsPPDecayer.icc
 HwPerturbativeDecay_la_LDFLAGS = -module
 
 #SMHiggsWWDecayer.cc  SMHiggsWWDecayer.fh  \
