@@ -1,0 +1,18 @@
+// -*- C++ -*-
+//
+// This is the forward declaration of the SMHiggsGGHiggsPPDecayer class.
+//
+#ifndef ThePEG_SMHiggsGGHiggsPPDecayer_FH
+#define ThePEG_SMHiggsGGHiggsPPDecayer_FH
+
+#include "ThePEG/Config/Pointers.h"
+
+namespace Herwig {
+  using namespace ThePEG;
+
+class SMHiggsGGHiggsPPDecayer;
+ThePEG_DECLARE_POINTERS(SMHiggsGGHiggsPPDecayer,SMHiggsGGHiggsPPDecayerPtr);
+
+}
+
+#endif
