@@ -1,0 +1,103 @@
+// -*- C++ -*-
+//
+// This is the implementation of the inlined member functions of
+// the SMHiggsGGHiggsPPDecayer class.
+//
+
+namespace Herwig {
+  using namespace ThePEG;
+  
+inline SMHiggsGGHiggsPPDecayer::SMHiggsGGHiggsPPDecayer() {
+  _h0wgt.resize(2,0.);
+  //Higgs to glu,glu
+  _h0wgt[0] = 1.;
+  //Higgs to gamma ,gamma
+  _h0wgt[1] = 1.;
+}
+
+inline SMHiggsGGHiggsPPDecayer::SMHiggsGGHiggsPPDecayer
+(const SMHiggsGGHiggsPPDecayer & x)
+  : DecayIntegrator(x),_hggvertex(x._hggvertex),_hppvertex(x._hppvertex),
+    _h0wgt(x._h0wgt) {}
+
+inline IBPtr SMHiggsGGHiggsPPDecayer::clone() const {
+  return new_ptr(*this);
+}
+
+inline IBPtr SMHiggsGGHiggsPPDecayer::fullclone() const {
+  return new_ptr(*this);
+}
+
+inline void SMHiggsGGHiggsPPDecayer::doupdate() throw(UpdateException) {
+  DecayIntegrator::doupdate();
+  // First update base class.
+  bool redo = touched();
+  // redo if touched.
+//  UpdateChecker::check(aDependentMember, redo);
+  // Update referenced objects on which this depends redo is set to true
+  // if the dependent object is touched.
+//  for_each(ContainerOfDependencies, UpdateChecker(redo));
+  // Update a container of references.
+//  for_each(MapOfDependencies, UpdateMapChecker(redo));
+  // Update a map of references.
+  if ( !redo ) return;
+  // return if nothing has been touched. Otherwise do the actual update.
+//  touch()
+  // Touch if anything has changed.
+}
+inline void SMHiggsGGHiggsPPDecayer::doinit() throw(InitException) {
+  DecayIntegrator::doinit();
+  if(_hggvertex) {
+    _hggvertex->init();
+  }
+  else {
+    throw InitException() << "SMHiggsGGHiggsPPDecayer::doinit() - " 
+			  << "_hggvertex is null";
+  }
+  if(_hppvertex) {
+    _hppvertex->init();
+  }
+  else {
+    throw InitException() << "SMHiggsGGHiggsPPDecayer::doinit() - " 
+			  << "_hppvertex is null";
+  }
+  //set up decay modes
+  DecayPhaseSpaceModePtr mode;
+  PDVector extpart(3);
+  vector<double> wgt(0);
+  //glu,glu mode
+  extpart[0] = getParticleData(ParticleID::h0);
+  extpart[1] = getParticleData(ParticleID::g);
+  extpart[2] = getParticleData(ParticleID::g);
+  mode = new_ptr(DecayPhaseSpaceMode(extpart,this));
+  addMode(mode,_h0wgt[0],wgt);
+  //gamma,gamma mode
+  extpart[1] = getParticleData(ParticleID::gamma);
+  extpart[2] = getParticleData(ParticleID::gamma);
+  mode = new_ptr(DecayPhaseSpaceMode(extpart,this));
+  addMode(mode,_h0wgt[1],wgt);
+}
+
+inline void SMHiggsGGHiggsPPDecayer::dofinish() {
+  DecayIntegrator::dofinish();
+}
+
+inline void SMHiggsGGHiggsPPDecayer::doinitrun() {
+  _hggvertex->initrun();
+  _hppvertex->initrun();
+  DecayIntegrator::doinitrun();
+}
+
+inline void SMHiggsGGHiggsPPDecayer::rebind(const TranslationMap & trans)
+  throw(RebindException) {
+  // dummy = trans.translate(dummy);
+  DecayIntegrator::rebind(trans);
+}
+
+inline IVector SMHiggsGGHiggsPPDecayer::getReferences() {
+  IVector ret = DecayIntegrator::getReferences();
+  // ret.push_back(dummy);
+  return ret;
+}
+ 
+}
